@@ -13,25 +13,21 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
-#set -x # DEBUG
 
-if [ -z "${JAVA_HOME}" ] ; then
-    JAVA=$(which java)
-else
-    JAVA=${JAVA_HOME}/bin/java
+#set -x # debug
+
+ROOT=$(cd "$(dirname "$0")/.." && pwd -P)
+
+# discover BROOKLYN_HOME if not set, by attempting to resolve absolute path of this command
+if [ -z "$BROOKLYN_HOME" ] ; then
+    BROOKLYN_HOME=$(cd "$(dirname "$(readlink -f "$0" 2> /dev/null || readlink "$0" 2> /dev/null || echo "$0")")/.." && pwd)
 fi
 
-if [ ! -x "${JAVA}" ] ; then
-  echo Cannot find java. Set JAVA_HOME or add java to path.
-  exit 1
+# set blueprint and catalog options
+if [ $# -eq 1 ] ; then
+    CLOCKER="--app ${ROOT}/blueprints/docker-cloud.yaml --location $1"
 fi
+export JAVA_OPTS="-Xms1g -Xmx1g -Dbrooklyn.catalog.url=classpath://${ROOT}/catalog.xml -Dbrooklyn.catalog.mode=LOAD_BROOKLYN_CATALOG_URL"
 
-if [ -z "$(ls brooklyn-clocker-examples-*.jar 2> /dev/null)" ] ; then
-  echo Command must be run from the directory where the JAR is installed.
-  exit 4
-fi
-
-${JAVA} -Xms256m -Xmx1024m -XX:MaxPermSize=1024m  ${CLOCKER_OPTS} \
-    -classpath "conf/:patch/*:*:lib/*" brooklyn.clocker.example.ClockerMain "$@"
-
+# launch clocker
+${ROOT}/bin/brooklyn.sh launch ${CLOCKER}
